// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityBase creates specified field with specified types: object with fields 1`] = `
EntityBase {
  Symbol(internal): Object {
    "exact": false,
    "fields": Map {
      "a" => SimpleField {
        Symbol(internal): Object {
          "args": Map {},
          "multiplicity": "one",
          "name": "a",
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": 0,
          "persistence": Object {
            "derived": false,
            "identity": false,
            "indexed": false,
            "indexes": Object {},
            "persistent": true,
            "required": false,
          },
        },
      },
      "b" => SimpleField {
        Symbol(internal): Object {
          "args": Map {},
          "multiplicity": "one",
          "name": "b",
          "type": Object {
            "multiplicity": "one",
            "name": "BBB",
            "type": "enum",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": 1,
          "persistence": Object {
            "derived": false,
            "identity": false,
            "indexed": false,
            "indexes": Object {},
            "persistent": true,
            "required": false,
          },
        },
      },
      "c" => EntityField {
        Symbol(internal): Object {
          "args": Map {},
          "multiplicity": "one",
          "name": "c",
          "relation": HasOne {
            Symbol(internal): Object {
              "entity": "A",
              "field": "c",
              "hasOne": EntityReference {
                Symbol(internal): Object {
                  "backField": "id",
                  "entity": "CCC",
                  "field": "id",
                },
                Symbol(metadata): Object {},
              },
              "name": "AHasOneC",
            },
            Symbol(metadata): Object {
              "name": Object {
                "full": "AHasOneC",
                "normal": "AC",
                "short": "C",
              },
              "persistence": Object {
                "embedded": true,
                "single": true,
                "stored": false,
              },
              "verb": "HasOne",
            },
          },
          "type": Object {
            "multiplicity": "one",
            "name": "CCC",
            "type": "entity",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "create": Array [],
            "delete": Array [],
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": 2,
          "persistence": Object {
            "derived": false,
            "identity": false,
            "indexed": false,
            "indexes": Object {},
            "persistent": false,
            "required": false,
          },
        },
      },
      "d" => RelationField {
        Symbol(internal): Object {
          "args": Map {},
          "multiplicity": "one",
          "name": "d",
          "relation": HasOne {
            Symbol(internal): Object {
              "entity": "A",
              "field": "d",
              "hasOne": EntityReference {
                Symbol(internal): Object {
                  "backField": "id",
                  "entity": "CCC",
                  "field": "id",
                },
                Symbol(metadata): Object {},
              },
              "name": "AHasOneD",
            },
            Symbol(metadata): Object {
              "name": Object {
                "full": "AHasOneD",
                "normal": "AD",
                "short": "D",
              },
              "persistence": Object {
                "embedded": false,
                "single": true,
                "stored": false,
              },
              "verb": "HasOne",
            },
          },
          "type": Object {
            "multiplicity": "one",
            "name": "A",
            "type": "entity",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "create": Array [],
            "delete": Array [],
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": 3,
          "persistence": Object {
            "derived": false,
            "identity": false,
            "indexed": false,
            "indexes": Object {},
            "persistent": false,
            "required": false,
          },
        },
      },
      "id" => SimpleField {
        Symbol(internal): Object {
          "args": Map {},
          "idKey": EntityReference {
            Symbol(internal): Object {
              "backField": "id",
              "entity": "A",
              "field": "id",
            },
            Symbol(metadata): Object {},
          },
          "multiplicity": "one",
          "name": "id",
          "type": Object {
            "multiplicity": "one",
            "name": "ID",
            "type": "scalar",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": -1,
          "persistence": Object {
            "derived": false,
            "identity": true,
            "indexed": true,
            "indexes": Object {
              "id": Object {
                "name": "id",
                "sort": "Asc",
                "sparse": true,
                "type": "unique",
              },
            },
            "persistent": true,
            "required": true,
          },
        },
      },
    },
    "identity": Set {
      "id",
    },
    "indexed": Set {
      "id",
    },
    "name": "A",
    "operations": Map {},
    "relations": Set {
      "d",
    },
    "required": Set {
      "id",
    },
  },
  Symbol(metadata): Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": true,
            "unique": true,
          },
        },
      },
    },
    "titlePlural": "As",
  },
}
`;

exports[`EntityBase creates specified field with specified types: toObject with fields 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 0,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": false,
          "indexes": Object {},
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "a",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 1,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": false,
          "indexes": Object {},
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "b",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "BBB",
        "type": "enum",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 2,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": false,
          "indexes": Object {},
          "persistent": false,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "c",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "CCC",
        "type": "entity",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "create": Array [],
          "delete": Array [],
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 3,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": false,
          "indexes": Object {},
          "persistent": false,
          "required": false,
        },
      },
      "name": "d",
      "relation": Object {
        "entity": "A",
        "field": "d",
        "hasOne": "id@CCC#id",
        "metadata": Object {
          "name": Object {
            "full": "AHasOneD",
            "normal": "AD",
            "short": "D",
          },
          "persistence": Object {
            "embedded": false,
            "single": true,
            "stored": false,
          },
          "verb": "HasOne",
        },
        "name": "AHasOneD",
        "opposite": undefined,
      },
      "title": undefined,
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": true,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": true,
            "unique": true,
          },
        },
      },
    },
    "titlePlural": "As",
  },
  "name": "A",
  "operations": Array [],
  "title": undefined,
}
`;

exports[`EntityBase default has no Singular: toObject 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "Species",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": undefined,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "AllSpecies",
      "singular": "Species",
    },
    "persistence": Object {
      "indexes": Object {
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": false,
            "unique": true,
          },
        },
      },
    },
    "titlePlural": "AllSpecies",
  },
  "name": "Species",
  "operations": Array [],
  "title": undefined,
}
`;

exports[`EntityBase default: toObject 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": undefined,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": false,
            "unique": true,
          },
        },
      },
    },
    "titlePlural": "As",
  },
  "name": "A",
  "operations": Array [],
  "title": undefined,
}
`;

exports[`EntityBase should accept non default identity field "_id": non default _id fields 1`] = `
Object {
  "args": Object {},
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "entity": "A",
    "order": 0,
    "persistence": Object {
      "derived": false,
      "identity": true,
      "indexed": true,
      "indexes": Object {
        "_id": Object {
          "name": "_id",
          "sort": "Asc",
          "sparse": true,
          "type": "unique",
        },
      },
      "persistent": true,
      "required": true,
    },
  },
  "multiplicity": "one",
  "name": "_id",
  "title": undefined,
  "type": Object {
    "name": "String",
    "type": "scalar",
  },
}
`;

exports[`EntityBase should accept non default identity field "id": non default id fields 1`] = `
Object {
  "args": Object {},
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "entity": "A",
    "order": 0,
    "persistence": Object {
      "derived": false,
      "identity": true,
      "indexed": true,
      "indexes": Object {
        "id": Object {
          "name": "id",
          "sort": "Asc",
          "sparse": true,
          "type": "unique",
        },
      },
      "persistent": true,
      "required": true,
    },
  },
  "multiplicity": "one",
  "name": "id",
  "title": undefined,
  "type": Object {
    "name": "String",
    "type": "scalar",
  },
}
`;

exports[`EntityBase should take operations: toObject with operations 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": undefined,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": false,
            "unique": true,
          },
        },
      },
    },
    "titlePlural": "As",
  },
  "name": "A",
  "operations": Array [
    Object {
      "actionType": "create",
      "args": Array [
        Object {
          "description": undefined,
          "metadata": Object {
            "required": false,
          },
          "multiplicity": "one",
          "name": "id",
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
        Object {
          "description": undefined,
          "metadata": Object {
            "required": false,
          },
          "multiplicity": "many",
          "name": "fields",
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
      ],
      "custom": false,
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "execute": Array [],
        },
        "entity": "A",
        "order": 0,
      },
      "name": "updateUser",
      "payload": Array [
        Object {
          "description": undefined,
          "metadata": Object {
            "required": false,
          },
          "multiplicity": "many",
          "name": "result",
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
      ],
      "title": undefined,
    },
  ],
  "title": undefined,
}
`;

exports[`Indexing should create complex index entry: complex index text 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 0,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": true,
          "indexes": Object {
            "text": Object {
              "name": "text",
              "sort": "Asc",
              "sparse": undefined,
              "type": "text",
            },
          },
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "a",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 1,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": true,
          "indexes": Object {
            "text": Object {
              "name": "text",
              "sort": "Asc",
              "sparse": undefined,
              "type": "text",
            },
          },
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "b",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": true,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": true,
            "unique": true,
          },
        },
        "text": Object {
          "fields": Object {
            "a": "text",
            "b": "text",
          },
          "name": "text",
          "options": Object {
            "sparse": false,
            "unique": false,
          },
        },
      },
    },
    "titlePlural": "As",
  },
  "name": "A",
  "operations": Array [],
  "title": undefined,
}
`;

exports[`Indexing should create complex unique index entry 1: complex identity index text 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 0,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "ab": Object {
              "name": "ab",
              "sort": "Asc",
              "sparse": undefined,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "a",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "ab": Object {
              "name": "ab",
              "sort": "Asc",
              "sparse": undefined,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "b",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": true,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "ab": Object {
          "fields": Object {
            "a": "Asc",
            "b": "Asc",
          },
          "name": "ab",
          "options": Object {
            "sparse": false,
            "unique": true,
          },
        },
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": true,
            "unique": true,
          },
        },
      },
    },
    "titlePlural": "As",
  },
  "name": "A",
  "operations": Array [],
  "title": undefined,
}
`;

exports[`Indexing should create complex unique index entry 2: complex identity index text 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 0,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "ab": Object {
              "name": "ab",
              "sort": "Asc",
              "sparse": undefined,
              "type": "unique",
            },
            "text": Object {
              "name": "text",
              "sort": "Asc",
              "sparse": undefined,
              "type": "text",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "a",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 1,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": true,
          "indexes": Object {
            "ab": Object {
              "name": "ab",
              "sort": "Asc",
              "sparse": undefined,
              "type": undefined,
            },
          },
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "b",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 2,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": true,
          "indexes": Object {
            "text": Object {
              "name": "text",
              "sort": "Asc",
              "sparse": undefined,
              "type": "text",
            },
          },
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "c",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": 3,
        "persistence": Object {
          "derived": false,
          "identity": false,
          "indexed": true,
          "indexes": Object {
            "ab": Object {
              "name": "ab",
              "sort": "Asc",
              "sparse": undefined,
              "type": undefined,
            },
            "d": Object {
              "name": "d",
              "sort": "Asc",
              "sparse": undefined,
              "type": undefined,
            },
            "text": Object {
              "name": "text",
              "sort": "Asc",
              "sparse": undefined,
              "type": "text",
            },
          },
          "persistent": true,
          "required": false,
        },
      },
      "multiplicity": "one",
      "name": "d",
      "title": undefined,
      "type": Object {
        "name": "String",
        "type": "scalar",
      },
    },
    Object {
      "args": Object {},
      "description": undefined,
      "inheritedFrom": undefined,
      "metadata": Object {
        "acl": Object {
          "read": Array [],
          "update": Array [],
        },
        "entity": "A",
        "order": -1,
        "persistence": Object {
          "derived": false,
          "identity": true,
          "indexed": true,
          "indexes": Object {
            "id": Object {
              "name": "id",
              "sort": "Asc",
              "sparse": true,
              "type": "unique",
            },
          },
          "persistent": true,
          "required": true,
        },
      },
      "multiplicity": "one",
      "name": "id",
      "title": undefined,
      "type": Object {
        "multiplicity": "one",
        "name": "ID",
        "type": "scalar",
      },
    },
  ],
  "metadata": Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "ab": Object {
          "fields": Object {
            "a": "Asc",
            "b": "Asc",
            "d": "Asc",
          },
          "name": "ab",
          "options": Object {
            "sparse": false,
            "unique": true,
          },
        },
        "d": Object {
          "fields": Object {
            "d": "Asc",
          },
          "name": "d",
          "options": Object {
            "sparse": false,
            "unique": false,
          },
        },
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": true,
            "unique": true,
          },
        },
        "text": Object {
          "fields": Object {
            "a": "text",
            "c": "text",
            "d": "text",
          },
          "name": "text",
          "options": Object {
            "sparse": false,
            "unique": false,
          },
        },
      },
    },
    "titlePlural": "As",
  },
  "name": "A",
  "operations": Array [],
  "title": undefined,
}
`;

exports[`Indexing should create index entry: indexed entity 1`] = `
EntityBase {
  Symbol(internal): Object {
    "exact": false,
    "fields": Map {
      "a" => SimpleField {
        Symbol(internal): Object {
          "args": Map {},
          "multiplicity": "one",
          "name": "a",
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": 0,
          "persistence": Object {
            "derived": false,
            "identity": false,
            "indexed": true,
            "indexes": Object {
              "a": Object {
                "name": "a",
                "sort": "Asc",
                "sparse": undefined,
                "type": undefined,
              },
              "some": Object {
                "name": "some",
                "sort": "Asc",
                "sparse": undefined,
                "type": undefined,
              },
            },
            "persistent": true,
            "required": false,
          },
        },
      },
      "id" => SimpleField {
        Symbol(internal): Object {
          "args": Map {},
          "idKey": EntityReference {
            Symbol(internal): Object {
              "backField": "id",
              "entity": "A",
              "field": "id",
            },
            Symbol(metadata): Object {},
          },
          "multiplicity": "one",
          "name": "id",
          "type": Object {
            "multiplicity": "one",
            "name": "ID",
            "type": "scalar",
          },
        },
        Symbol(metadata): Object {
          "acl": Object {
            "read": Array [],
            "update": Array [],
          },
          "entity": "A",
          "order": -1,
          "persistence": Object {
            "derived": false,
            "identity": true,
            "indexed": true,
            "indexes": Object {
              "id": Object {
                "name": "id",
                "sort": "Asc",
                "sparse": true,
                "type": "unique",
              },
            },
            "persistent": true,
            "required": true,
          },
        },
      },
    },
    "identity": Set {
      "id",
    },
    "indexed": Set {
      "a",
      "id",
    },
    "name": "A",
    "operations": Map {},
    "relations": Set {},
    "required": Set {
      "id",
    },
  },
  Symbol(metadata): Object {
    "UI": Object {
      "edit": Array [],
      "embedded": Array [],
      "hidden": Array [],
      "list": Array [],
      "listName": Array [],
      "quickSearch": Array [],
      "show": Array [],
    },
    "acl": Object {
      "create": Array [],
      "delete": Array [],
      "readMany": Array [],
      "readOne": Array [],
      "update": Array [],
    },
    "name": Object {
      "plural": "As",
      "singular": "A",
    },
    "persistence": Object {
      "indexes": Object {
        "a": Object {
          "fields": Object {
            "a": "Asc",
          },
          "name": "a",
          "options": Object {
            "sparse": false,
            "unique": false,
          },
        },
        "coolIndex": Object {
          "fields": Object {
            "a": "Asc",
          },
          "name": "some",
        },
        "id": Object {
          "fields": Object {
            "id": "Asc",
          },
          "name": "id",
          "options": Object {
            "sparse": true,
            "unique": true,
          },
        },
        "some": Object {
          "fields": Object {
            "a": "Asc",
          },
          "name": "some",
          "options": Object {
            "sparse": false,
            "unique": false,
          },
        },
      },
    },
    "titlePlural": "As",
  },
}
`;
